Adjusted parent container min-width to 210px. Doing this resolved the text from overlapping the click counter.

--- a/src/components/ClickCounter.css
+++ b/src/components/ClickCounter.css
@@ -1,6 +1,6 @@
 .click-counter {
   text-align: center;
-  min-width: 160px;
+  min-width: 210px;
 }
 
 .animal-counts {
